--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/assets/item/logo.jpg" type="image/icon type">
-    <title>QUICK Food App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Concert+One&family=Monoton&display=swap" rel="stylesheet">
+    <title>BiteQ Food Delivery App</title>
 </head>
 
 <body>
